# cmake-practice

backup/cmake/t1/: CMakeLists.txt
backup/cmake/t2/: CMakeLists.txt
backup/cmake/t2/src/: CMakeLists.txt
backup/cmake/t3/: CMakeLists.txt
backup/cmake/t3/lib/: CMakeLists.txt  hello.c  hello.h
backup/cmake/t4/: CMakeLists.txt
backup/cmake/t4/src/: CMakeLists.txt
backup/cmake/t5/src/: CMakeLists.txt  main.c
backup/cmake/t6/: CMakeLists.txt
backup/cmake/t6/cmake/: FindHELLO.cmake
backup/cmake/t6/src/: CMakeLists.txt  main.c
backup/cmake/var/: CMakeLists.txt  main.c
