project(HELLO C)
set(SRC_LIST main.c)
message(STATUS "This is BINARY dir " ${HELLO_BINARY_DIR})
# message(STATUS "This is BINARY dir ${HELLO_BINARY_DIR}")
# message(SEND_ERROR "This is BINARY dir " ${HELLO_BINARY_DIR})
# message(FATAL_ERROR "This is BINARY dir " ${HELLO_BINARY_DIR})
message(STATUS "This is SOURCE dir " ${HELLO_SOURCE_DIR})
add_executable(hello ${SRC_LIST})
